--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Test Title</title>
+    <title>First Page Title</title>
   </head>
   <body>
-    <h1>This is a test Body Heading</h1>
+    <h1>This is the Landing Page</h1>
   </body>
 </html>
